src/objects/SBQQ__CustomScript__c/fields/SBQQ__Code__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Code__c</fullName>
    <description>Script code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Code that can be executed by an outside resource.</inlineHelpText>
    <label>Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>