src/objects/SBQQ__CustomScript__c/fields/SBQQ__ConsumptionScheduleFields__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ConsumptionScheduleFields__c</fullName>
    <description>Fields on the ConsumptionSchedule object referenced by this plugin</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API names of consumption schedule fields referenced by this plugin. Enter as many as 10 fields, one field on each line.</inlineHelpText>
    <label>Consumption Schedule Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>