src/objects/SBQQ__CustomScript__c/fields/SBQQ__QuoteFields__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__QuoteFields__c</fullName>
    <description>Fields on the Quote__c object referenced by this plugin</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the API names of any Quote fields referenced by this plugin, one per line.</inlineHelpText>
    <label>Quote Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>