src/objects/SBQQ__CustomScript__c/fields/SBQQ__QuoteLineFields__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__QuoteLineFields__c</fullName>
    <description>QuoteLine__c fields referenced by the plugin</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the API names of all Quote Line fields referenced by this plugin, one per line.</inlineHelpText>
    <label>Quote Line Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>